# DKB-transaction-analysis

./: .gitignore  README.md  main.py  pyproject.toml
api/: __init__.py  api.py  exceptions.py  google_sheet_api.py
model/: amount.py  attributes.py  creditor.py  transaction.py
utils/: __init__.py  categories.py  utils.py
